--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@arcjet/next": "^1.0.0-beta.2",
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
@@ -21,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
