--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.2",
     "@hookform/resolvers": "^4.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.0.8",
     "lucide-react": "^0.477.0",
     "mongoose": "^8.11.0",
-    "next": "15.2.0",
+    "next": "^15.2.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,6 +29,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^7.4.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
