--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@arcjet/next": "^1.0.0-beta.2",
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -19,6 +20,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "figlet": "^1.8.0",
     "jose": "^6.0.8",
     "lucide-react": "^0.477.0",
     "mongoose": "^8.11.0",
